<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nowplaying_album_cover_picture"
                style="@style/NowPlayingAlbumPicture"
                android:contentDescription="@string/album_picture"
                android:src="@drawable/albums" />

            <TextView
                android:id="@+id/playing_song"
                style="@style/NowPlayingSong"
                android:text="@string/songs" />

            <TextView
                android:id="@+id/playing_artist"
                style="@style/NowPlayingArtist"
                android:text="@string/artists" />

            <TextView
                android:id="@+id/playing_album"
                style="@style/NowPlayingAlbum"
                android:text="@string/albums" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigationButtons"
            style="@style/ButtonsLinearLayout">

            <ImageView
                android:id="@+id/repeat_button"
                style="@style/ButtonStyle"
                android:contentDescription="@string/repeat_button"
                android:src="@drawable/ic_action_playback_repeat" />

            <ImageView
                android:id="@+id/previous_button"
                style="@style/ButtonStyle"
                android:contentDescription="@string/previous_button"
                android:src="@drawable/ic_action_playback_prev" />

            <ImageView
                android:id="@+id/pause_button"
                style="@style/ButtonStyle"
                android:contentDescription="@string/pause_button"
                android:src="@drawable/ic_action_playback_pause" />

            <ImageView
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:contentDescription="@string/next_button"
                android:src="@drawable/ic_action_playback_next" />

            <ImageView
                android:id="@+id/schuffle_button"
                style="@style/ButtonStyle"
                android:contentDescription="@string/schuffle_button"
                android:src="@drawable/ic_action_playback_schuffle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>