<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlbumActivity">

    <ImageView
        android:id="@+id/album_picture_image_view"
        style="@style/AlbumPicture"
        android:contentDescription="@string/album_picture"
        android:src="@drawable/albums" />

    <TextView
        android:id="@+id/album_title_text_view"
        style="@style/AlbumTitle"
        tools:text="@string/albums" />

    <TextView
        android:id="@+id/album_artist_name_text_view"
        style="@style/AlbumArtist"
        tools:text="@string/artists" />

    <TextView
        android:id="@+id/album_date_text_view"
        style="@style/AlbumDate"
        tools:text="@string/album_date" />

</LinearLayout>

