<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/padding_default"
    tools:context=".SongsActivity">

    <ImageView
        android:id="@+id/album_cover_picture"
        style="@style/SongAlbumPicture"
        android:contentDescription="@string/album_picture"
        android:src="@drawable/artists" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <TextView
            android:id="@+id/song_title_text_view"
            style="@style/SongTitle"
            tools:text="@string/song_title" />

        <TextView
            android:id="@+id/song_artist_name_text_view"
            style="@style/SongArtistName"
            tools:text="@string/artists" />

        <TextView
            android:id="@+id/song_album_title_text_view"
            style="@style/SongAlbumTitle"
            tools:text="@string/albums" />

    </LinearLayout>

</LinearLayout>

